--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Software Developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Bloomfield Hiils, MI</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Walking with my dog</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Work at Google as Software Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Houston, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Unlimited possibilities </p>
     </section>
 
     <footer id="footer">
